# mantis

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  MANTIS.config  README.md  __main__.py  install.sh  mantis_env.yml  pyproject.toml  setup.py  tab_e_value.html
References/Custom_references/: readme.md
Resources/: .gitattributes
Resources/Gene_Ontology/: go.obo.pickle_dict  go.obo.pickle_dict.REMOVED.git-id  go.obo.pickle_syns  go.obo.pickle_syns.REMOVED.git-id  go.obo.pickle_terms
Resources/KEGG/: get_pickle.py  modules.pickle
Resources/NOG_sql/: NOGT1.tar.gz.REMOVED.git-id  NOGT2.tar.gz.REMOVED.git-id  NOGT3.tar.gz.REMOVED.git-id  NOGT4.tar.gz.REMOVED.git-id  NOGT5.tar.gz.REMOVED.git-id
Resources/Uniprot/: uniprot-filtered-reviewed_yes.tab.gz.REMOVED.git-id  uniprot-filtered-reviewed_yes.tab_n_grams_1.pickle
Resources/essential_genes/: readme.md  (+1 more)
config/: MANTIS.cfg
mantis/: Assembler.py  Consensus.py  Database_generator.py  Exceptions.py  Homology_processor.py  MANTIS.py  Metadata.py  Metadata_SQLITE_Connector.py  Multiprocessing.py  Taxonomy_SQLITE_Connector.py  UniFunc_wrapper.py  __main__.py  assembler.py  consensus.py  database_generator.py  exceptions.py  homology_processor.py  mantis.py  metadata.py  metadata_sqlite_connector.py  multiprocessing.py  taxonomy_sqlite_connector.py  unifunc_wrapper.py  uniprot_api.py  utils.py
mantis.wiki/: Additional information.md  Configuration.md  Copyright.md  Functionalities.md  Home.md  Output.md  Project structure and architecture.md  _sidebar.md
references/: readme.md
source/: Assembler.py  Consensus.py  Database_generator.py  Exceptions.py  GTDB_SQLITE_Connector.py  Homology_processor.py  MANTIS.py  MANTIS_Assembler.py  MANTIS_Consensus.py  MANTIS_DB.py  MANTIS_Interpreter.py  MANTIS_MP.py  MANTIS_Metadata.py  MANTIS_NLP.py  MANTIS_Processor.py  MANTIS_Taxonomy.py  Metadata.py  Metadata_SQLITE_Connector.py  Multiprocessing.py  Taxonomy_SQLITE_Connector.py  UniFunc_wrapper.py  utils.py
tests/: test_MANTIS.cfg  test_MANTIS.config  test_file.tsv  test_sample.faa  test_sample_nt.fasta
(+96 files in other folders)
