[project]
name = "mantis"
version = "1.5.5"
description = "Mantis is protein function annotation, that dynamically integrates multiple reference databases to produce consensus-driven annotations."
authors = [{ name = "Pedro Queiros", email = "pdqueiros@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [{ name = "Pedro Queiros", email = "pdqueiros@gmail.com" }]
dependencies = [
    "psutil",
    "pytest",
    "prettytable",
    "tqdm",
    "nltk",
    "cython",
    "ruff",
    "unifunc",
]

[project.urls]
Repository = "https://github.com/PedroMTQ/mantis.git"

[project.scripts]
mantis = "mantis.__main__:main"

[tool.wheels]
remote_server_wheels_path = ""
remote_server_address = ""
remote_server_port = ""

[tool.ruff]
line-length = 150
select = ["E",  "W",  "F",  "I", "B"]
ignore=["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[[tool.uv.index]]
name = "conda-forge"
url = "https://conda.anaconda.org/conda-forge"
explicit = true
